--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,11 +12,11 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: linux-latest
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: https://nodejs.org/download/release/latest-v18.x/node-v18.9.1-linux-x64.tar.xz
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
